--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "internalappsample",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,8 +12,10 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "ejs": "^3.1.8",
     "express": "~4.16.1",
     "express-fileupload": "^1.2.1",
+    "express-session": "^1.17.3",
     "form-data": "^4.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
