--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.5",
     "debug": "~2.6.9",
     "ejs": "^3.1.8",
     "express": "~4.16.1",
@@ -20,6 +21,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "node-localstorage": "^2.2.1",
     "url-parse": "^1.5.3"
   },
   "devDependencies": {
