--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "cd ./vue && npx yarn install && npx yarn build"
   },
   "dependencies": {
+    "@wecom/crypto": "^1.0.1",
     "axios": "^0.21.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -22,7 +23,9 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "node-localstorage": "^2.2.1",
-    "url-parse": "^1.5.3"
+    "raw-body": "^2.5.1",
+    "url-parse": "^1.5.3",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.3",
